--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   font-weight: bold;
 }
 
+.sky {
+  background: url('images/sky.png') no-repeat center center fixed;
+  background-size: cover;
+}
+
 .git-cookbook {
   background: url('images/git-cookbook.png') no-repeat center center fixed;
   background-size: contain;
@@ -466,7 +471,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
     <div class="progress-bar"></div>
   </div>
 
-  <div class="slide" id="slide-1">
+  <div class="slide  sky" id="slide-1">
     <section class="slide-content"><h1 id="demystifying-git">Demystifying Git</h1>
 <h2 id="or-how-i-learned-not-to-be-afraid-of-detached-head">or how I learned not to be afraid of detached head</h2>
 </section>
